// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IDCC return idcc for number 27 1`] = `
{
  "hits": [
    {
      "_id": "20",
      "_index": "cdtn_test-v2_documents",
      "_score": 7.067604,
      "_source": {
        "cdtnId": "ceb38cca3c",
        "contributions": false,
        "effectif": 219,
        "id": "KALICONT000023973390",
        "num": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Banque : personnel des banques de la Guyane",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 7.067604,
  "total": {
    "relation": "eq",
    "value": 1,
  },
}
`;

exports[`IDCC return idcc results for boulangerie 1`] = `
{
  "hits": [
    {
      "_id": "19",
      "_index": "cdtn_test-v2_documents",
      "_score": 15.546368,
      "_source": {
        "cdtnId": "647c224c9b",
        "contributions": true,
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "num": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Boulangerie-pâtisserie (entreprises artisanales)",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    {
      "_id": "18",
      "_index": "cdtn_test-v2_documents",
      "_score": 14.4430065,
      "_source": {
        "cdtnId": "16752da066",
        "contributions": false,
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "num": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Activités industrielles de boulangerie et pâtisserie",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 15.546368,
  "total": {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`IDCC return idcc results for pati 1`] = `
{
  "hits": [
    {
      "_id": "19",
      "_index": "cdtn_test-v2_documents",
      "_score": 15.258489,
      "_source": {
        "cdtnId": "647c224c9b",
        "contributions": true,
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "num": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Boulangerie-pâtisserie (entreprises artisanales)",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    {
      "_id": "18",
      "_index": "cdtn_test-v2_documents",
      "_score": 14.155128,
      "_source": {
        "cdtnId": "16752da066",
        "contributions": false,
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "num": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Activités industrielles de boulangerie et pâtisserie",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 15.258489,
  "total": {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`IDCC return idcc results in correct order for banque 1`] = `
{
  "hits": [
    {
      "_id": "21",
      "_index": "cdtn_test-v2_documents",
      "_score": 17.23316,
      "_source": {
        "cdtnId": "a25dfc974f",
        "contributions": true,
        "effectif": 216431,
        "id": "KALICONT000005635780",
        "num": 2120,
        "shortTitle": "Banque",
        "slug": "2120-banque",
        "title": "Banque",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635780",
      },
      "_type": "_doc",
    },
    {
      "_id": "20",
      "_index": "cdtn_test-v2_documents",
      "_score": 10.528515,
      "_source": {
        "cdtnId": "ceb38cca3c",
        "contributions": false,
        "effectif": 219,
        "id": "KALICONT000023973390",
        "num": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Banque : personnel des banques de la Guyane",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 17.23316,
  "total": {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`IDCC should return nothing 1`] = `
{
  "_shards": {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": {
    "hits": [],
    "max_score": null,
    "total": {
      "relation": "eq",
      "value": 0,
    },
  },
  "timed_out": false,
}
`;
